# src/product/product.controller.js
@@ -16,5 +16,9 @@ exports.getById = async (req, res) => {
     const product = await repository.getById(req.params.id);
     product ? res.send(product) : res.status(404).send({message: "Product not found"})
 };
+exports.deleteById = async (req, res) => {
+    const response = await repository.deleteById(req.params.id);
+    response ? res.send({message: `${req.params.id} deleted`}) : res.status(404).send({message: "Product not found"})
+};
 
 exports.repository = repository;
