# src/product/product.routes.js
@@ -4,5 +4,6 @@ const controller = require('./product.controller');
 router.get("/product/:id", controller.getById);
 router.get("/products", controller.getAll);
 router.post("/products", controller.create);
+router.delete("/product/:id", controller.deleteById);
 
 module.exports = router;
